--- a/pages/content-ui/package.json
+++ b/pages/content-ui/package.json
@@ -25,12 +25,48 @@
   "dependencies": {
     "@extension/shared": "workspace:*",
     "@extension/storage": "workspace:*",
-    "@extension/ui": "workspace:*"
+    "@extension/ui": "workspace:*",
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
+    "@huggingface/transformers": "3.0.0-alpha.15",
+    "@lobehub/tts": "^1.24.3",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react-window": "^1.8.8",
+    "@xenova/transformers": "^2.17.2",
+    "ahooks": "^3.8.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "emittery": "^1.0.3",
+    "jsonrepair": "^3.8.0",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.441.0",
+    "m3u8-parser": "^7.2.0",
+    "openai": "^4.61.0",
+    "parse-json": "^8.1.0",
+    "rcrx": "^0.0.3",
+    "re-resizable": "^6.9.18",
+    "react-draggable": "^4.4.6",
+    "react-json-view": "^1.21.3",
+    "react-markdown": "^9.0.1",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
+    "rxjs": "^7.8.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@extension/hmr": "workspace:*",
     "@extension/tailwindcss-config": "workspace:*",
     "@extension/tsconfig": "workspace:*",
-    "@extension/hmr": "workspace:*",
     "@extension/vite-config": "workspace:*",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3"
