--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "esbuild": "^0.23.0",
     "eslint": "8.57.0",
@@ -53,17 +54,20 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "4.6.2",
+    "express": "^4.21.0",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^3.0.2",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "run-script-os": "^1.1.6",
     "tailwindcss": "^3.4.6",
     "tslib": "^2.6.3",
     "turbo": "^2.0.12",
     "typescript": "5.5.4",
-    "vite": "5.4.3",
-    "run-script-os": "^1.1.6"
+    "vite": "5.4.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json}": [
